Actualizar configuración de Angular para límites de tamaño de estilos de componentes y eliminar el color de fondo del estado seleccionado en los estilos del componente Differ.

--- a/src/app/features/differ/pages/differ.component.scss
+++ b/src/app/features/differ/pages/differ.component.scss
@@ -147,7 +147,7 @@
     }
 
     &--selected {
-      background-color: rgba($color-primary, 0.05);
+      // background-color removido
     }
 
     &:hover {
@@ -155,7 +155,7 @@
     }
 
     &--selected:hover {
-      background-color: rgba($color-primary, 0.08);
+      // background-color removido
     }
   }
 
